@@ -48,6 +48,7 @@ Verilator 5.031 devel
 * Fix NBAs to unpacked arrays of unpacked structs (#5603). [Geza Lore]
 * Fix array of struct member overwrites on member update (#5605) (#5618) (#5628). [sumpster]
 * Fix interface and struct pattern collision (#5639) (#5640). [Todd Strader]
+* Fix mis-aliasing of instances with mailbox parameter types (#5632 partial).
 
 
 Verilator 5.030 2024-10-27
